# Internal-presales-agent

./: .gitignore  README.md  api_standardisation.md  pyproject.toml  requirements.txt
src/api/: constants.py  main.py
src/core/: generate_section.py  refine_section.py  state.py
src/core/graphs/: build_session_graph.py
src/core/nodes/: config.py  context_extractor_node.py  section_sync_node.py  transcript_loader_node.py
src/core/schemas/: fact_schema.py  sections_schema.py
src/core/tools/: chunk_text.py  llm_client.py  retrieval.py  supabase_db.py  transcript_extractor.py
